--- a/public/index.html
+++ b/public/index.html
@@ -1,23 +1,43 @@
 <!DOCTYPE html>
 <html>
-    <title>
-        Chat App
-    </title>
-    <head></head>
+    <head>
+        <title>Chat App</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    </head>
     <body>
         <div class="container">
-            <p>Chat App</p>
-        </div>
-        <form id="messageform">
-            <input type="text" name="message" placeholder="message">
-            <button type="submit" >Send</button>
-        </form>
+            <div class="jumbotron">
+                <h1>Chat App</h1>
+            </div>
 
-        <button id='sendlocation'>Location</button>
+            <div id="messages"></div>
+
+            <form id="messageform">
+                <input type="text" name="message" placeholder="Enter Message">
+                <button type="submit" >Send</button>
+            </form>
+    
+            <button id='sendlocation'>Location</button>
+
+            <script id="msg-temp" type="text/html">
+                <div>
+                    <p>{{message}}</p>
+                </div>
+            </script>
+            <script id="url-temp" type="text/html">
+                <div>
+                    <h3><a href={{message}} target="_blank">My Current Location</a></h3>
+                </div>
+            </script>
+        </div>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.6.0/qs.min.js"></script>
         <script src="/socket.io/socket.io.js"></script>
         <script src="js/chat.js"></script>
     </body>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 </html>
