--- a/public/index.html
+++ b/public/index.html
@@ -4,40 +4,26 @@
         <title>Chat App</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="icon" href="img/favicon.png" >
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+        <link rel="stylesheet" href="css/styles.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     </head>
     <body>
-        <div class="container">
-            <div class="jumbotron">
-                <h1>Chat App</h1>
+        <div class="centered-form">
+            <div class="centered-form__box">
+                <h1>Join</h1>
+                <form action="/chat.html">
+                    <label>Display Name</label>
+                    <input type="text" name="username" placeholder="Display Name" required >
+
+                    <label>Room</label>
+                    <input type="text" name="room" placeholder="Room" required>
+
+                    <button type="submit">Join</button>
+                </form>
             </div>
-
-            <div id="messages"></div>
-
-            <form id="messageform">
-                <input type="text" name="message" placeholder="Enter Message">
-                <button type="submit" >Send</button>
-            </form>
-    
-            <button id='sendlocation'>Location</button>
-
-            <script id="msg-temp" type="text/html">
-                <div>
-                    <p>{{message}}</p>
-                </div>
-            </script>
-            <script id="url-temp" type="text/html">
-                <div>
-                    <h3><a href={{message}} target="_blank">My Current Location</a></h3>
-                </div>
-            </script>
         </div>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.6.0/qs.min.js"></script>
-        <script src="/socket.io/socket.io.js"></script>
-        <script src="js/chat.js"></script>
     </body>
 </html>
